--- a/basic-commands/1.显示视频基本信息.md
+++ b/basic-commands/1.显示视频基本信息.md
@@ -1,12 +1,14 @@
-* 显示全部视频信息
+## 使用命令`ffmpeg -i {视频文件}`显示视频信息
 
-使用如下命令显示视频信息：
+
+### 显示全部视频信息
 
 ```
 ffmpeg -i HelloWorld.mp4 
 ```
 
-命令行输出：
+* 命令行输出：
+
 
 ```
 ffmpeg version 4.0.2 Copyright (c) 2000-2018 the FFmpeg developers
@@ -39,13 +41,13 @@ Input #0, mov,mp4,m4a,3gp,3g2,mj2, from 'HelloWorld.mp4':
 At least one output file must be specified
 ```
 
-* 显示主要视频信息
+### 显示主要视频信息
 
 ```
 ffmpeg -i HelloWorld.mp4 -hide_banner
 ```
 
-命令行输出：
+* 命令行输出：
 
 ```
 Input #0, mov,mp4,m4a,3gp,3g2,mj2, from 'HelloWorld.mp4':
